wolfshop/promotion/promotion-ms/k8s/wolfshop-promotion-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wolfshop-promotion
  name: wolfshop-promotion
  namespace: wolfshop
#--------------- deploy -------------------------------------------  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wolfshop-promotion
#---------------- pod ---------------------------------------------      
  template:
    metadata:
      labels:
        app: wolfshop-promotion
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 3000
      containers:
      - image: marcusvbrangel/promotion:1.2.0
        name: wolfshop-promotion-container        
        resources:
          requests:
            memory: "760Mi"
            cpu: "0.1"
          limits:
            memory: "1000Mi"
            cpu: "0.2"
        startupProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 30

        # Readiness Probe - checks if the container can start receiving traffic...
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 0  # startupProbe controls warm-up time
          periodSeconds: 10       # checks every 10 seconds
          timeoutSeconds: 1
          successThreshold: 1     # needs 1 success to become 'Ready'...
          failureThreshold: 6

        # Liveness Probe - checks if the container chashed and needs to restart...
        livenessProbe:
          httpGet: 
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 20
          timeoutSeconds: 1
          failureThreshold: 3     # if it fails 3 times, k8s restarts the container...

        volumeMounts:
        - name: promotion-volume
          mountPath: /data
        ports:
        - containerPort: 8080
      volumes:
      - name: promotion-volume
        persistentVolumeClaim:
          claimName: wolfshop-nfs-pvc
