wolfshop/promotion/promotion-ms/k8s/wolfshop-promotion-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wolfshop-promotion-httproute
  namespace: wolfshop
spec:
  parentRefs:
  - name: wolfshop-gateway
    sectionName: https-promotion
  hostnames:
  - "promotion.wolfshop.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: wolfshop-promotion
      port: 80
